# logos

./: .cursorrules  .gitignore  Cargo.toml  DEPLOY.sh  Dockerfile  README.md  docker-entry.sh  fly.toml  index.html  worker.js  wrangler.toml
config/: expected-git-origin.txt
data/: eval_result.jsonl  seed_rules.json
docs/: ASYNC_ARCHITECTURE_OPTIONS.md  AUTONOMOUS_LEARNING_GAPS_OPUS_INSTRUCTIONS.md  INSTR_ABSORB_MISS_IN_LEARNING_CYCLE.md  LOGOS_CHASE_PLAN.md  LOGOS_FORMULA.md  POUCH_LAYER_PLANNING.md  PROMPT_VERIFY_AND_UI_SYNC.md  architecture_checklist.json  cursor_logos_folder_optimization_and_gi.md  怎么跟LOGOS说话.md  投喂.txt
export/: README.md
scripts/: augment_training_data.mjs  check_architecture.mjs  cloud_feed_harvest.sh  cloud_feed_hf.mjs  create_enhancement_table.sql  create_evolution_table.sql  create_learning_tables.sql  create_validation_tables.sql  export_logos_audit.mjs  extract_seed.mjs  feed_eval_to_backend.sh  feed_full_via_worker.sh  feed_hf_to_backend.mjs  feed_hf_to_backend.sh  feed_misses_to_cloud.mjs  generate_p08_report.cjs  generate_p08_report.mjs  improve_language_from_gaps.mjs  install-pre-commit-guard.sh  language_train_and_eval.sh  optimize_d1.sql  stress_test.mjs  test_cloud_1k.mjs  test_cloud_language.sh  test_enhancement.sh  test_evolution_full.sh  test_feedback.sh  test_learning.sh  test_learning_cycle.sh  test_long_context.sh  test_seed_vs_full.sh  verify_local.sh  verify_ui_endpoints.sh  warmup_worker.sh  worker_deploy_and_check.sh
src/: atom.rs  config.rs  evolution.rs  language_pouch.rs  main.rs  manager_math.rs  orchestrator.rs  (+24 more)
(+8 files in other folders)
