[package]
name = "logos"
version = "5.0.0"
edition = "2021"
default-run = "logos"

[[bin]]
name = "logos"
path = "src/main.rs"
required-features = []

[[bin]]
name = "filter_zh_simplified"
path = "src/bin/filter_zh_simplified.rs"

[[bin]]
name = "clean_language_data"
path = "src/bin/clean_language_data.rs"

[[bin]]
name = "stats"
path = "src/bin/stats.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "augment_training_data"
path = "src/bin/augment_training_data.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.20"
unicode-segmentation = "1.11"
bincode = "1.3"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
